k8s/ai-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-svc
  namespace: newsera
  labels:
    app: ai-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-svc
  template:
    metadata:
      labels:
        app: ai-svc
    spec:
      containers:
        - name: ai-svc
          image: adityapurkar/news-app-distributed-ai-svc:13
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5003
              name: ai-port
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: ai-svc
  namespace: newsera
spec:
  ports:
    - port: 5003
      targetPort: 5003
      protocol: TCP
  selector:
    app: ai-svc
