k8s/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: newsera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: adityapurkar/news-app-distributed-api-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: newsera
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 5000
      protocol: TCP
  selector:
    app: api-gateway
