k8s/auth-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-svc
  namespace: newsera
  labels:
    app: auth-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-svc
  template:
    metadata:
      labels:
        app: auth-svc
    spec:
      containers:
        - name: auth-svc
          image: adityapurkar/news-app-distributed-auth-svc:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
              name: auth-port
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: newsera
spec:
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
  selector:
    app: auth-svc
