k8s/mongodb.yml

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongodb
  namespace: newsera
spec:
  serviceName: "mongodb-internal"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6.0
          ports:
            - containerPort: 27017
              name: mongo-port
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongodb-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 3Gi
---
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: newsera
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongodb
