k8s/news-svc.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: news-svc
  namespace: newsera
  labels:
    app: news-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-svc
  template:
    metadata:
      labels:
        app: news-svc
    spec:
      containers:
       - name: news-svc
         image: adityapurkar/news-app-distributed-news-svc:latest
         imagePullPolicy: IfNotPresent
         ports:
          - containerPort: 5002
            name: news-port
         resources:
           requests:
             memory: "128Mi"
             cpu: "100m"
           limits:
             memory: "256Mi"
             cpu: "200m"
---
kind: Service
apiVersion: v1
metadata: 
  name: news-svc
  namespace: newsera
  labels:
     app: news-svc
spec:
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
  selector:
    app: news-svc
