k8s/ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsera-apis-ingress
  namespace: newsera
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-svc
                port:
                  number: 5001

          - path: /api/news/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: news-svc
                port:
                  number: 5002
